--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,10 +2,7 @@
 set-window-option -g automatic-rename on
 
 # mouse-related options
-set-window-option -g mode-mouse on
-set-window-option -g mouse-select-pane on
-set-window-option -g mouse-select-window on
-set-window-option -g mouse-resize-pane on
+set-option -g mouse on
 
 run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
 
