--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,9 @@ set-window-option -g automatic-rename on
 # mouse-related options
 set-option -g mouse on
 
+# set $TERM to "tmux" to user 256-color terminal
+set -g default-terminal "tmux"
+
 run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
 
 # tmuxline.vim
