--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -31,6 +31,7 @@
     ~/.config/fish/aliases: fish/aliases
     ~/.config/fish/completions/git.fish: git/git-flow-completion/git.fish
     ~/.config/fish/config.fish: fish/config.fish
+    ~/.config/fish/fishfile: fish/fishfile
     ~/.config/fish/functions: fish/functions/
     ~/.config/fish/exports: fish/exports
     ~/.config/fish/path: fish/path
