Change 'default-terminal' tmux option to 'screen'
'tmux' doesn't seem too work on every terminal. Back to 'screen' for the
moment.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,8 +4,8 @@ set-window-option -g automatic-rename on
 # mouse-related options
 set-option -g mouse on
 
-# set $TERM to "tmux" to user 256-color terminal
-set -g default-terminal "tmux"
+# set $TERM to "screen" to user 256-color terminal. "tmux" doesn't seem to work on every terms
+set -g default-terminal "screen"
 
 run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
 
