--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ fish/functions/__ssh_agent_start.fish
 fish/functions/fish_user_key_bindings.fish
 fish/functions/fzf_key_bindings.fish
 .vimrc_local
+texmf/tex/latex
 tmux/resurrect
 vim/colors/
