--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -40,6 +40,7 @@
     ~/.config/mc/ini: mc/ini
     ~/.config/pip/pip.conf: pip/pip.conf
     ~/.fonts: fonts
+    ~/.git_template: git/template/
     ~/.gitconfig: git/gitconfig
     ~/.gitignore_global: git/gitignore_global
     ~/.highlight/langDefs: syntaxhighlight/highlight/langDefs/
