--- a/.gitmodules
+++ b/.gitmodules
@@ -28,6 +28,9 @@
 [submodule "vim/bundle/ctrlp.vim"]
     path = vim/bundle/ctrlp.vim
     url = https://github.com/ctrlpvim/ctrlp.vim.git
+[submodule "vim/bundle/editorconfig-vim"]
+    path = vim/bundle/editorconfig-vim
+    url = https://github.com/editorconfig/editorconfig-vim.git
 [submodule "vim/bundle/MatchTag"]
     path = vim/bundle/MatchTag
     url = https://github.com/gregsexton/MatchTag.git
