Add ESLint configuration file

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -40,6 +40,7 @@
     ~/.config/mc/ini: mc/ini
     ~/.config/pip/pip.conf: pip/pip.conf
     ~/.editorconfig: editorconfig/editorconfig
+    ~/.eslintrc.yaml: eslint/eslintrc.yaml
     ~/.fonts: bin/fonts
     ~/.gemrc: gem/gemrc
     ~/.git_template: git/template/
