--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@
     - id: check-symlinks
     - id: check-xml
     - id: check-yaml
+    - id: detect-private-key
     - id: pretty-format-json
       args:
         - '--autofix'
