--- a/git/gitconfig_local.template
+++ b/git/gitconfig_local.template
@@ -6,6 +6,8 @@
     #autocrlf = false
     # Check out symlinks as small text files containing the link text. Useful on Windows
     #symlinks = false
+    # Do not use filemode. Useful on Windows
+    #fileMode = false
 #[credential]
     # the agent will keep the credentials during 7 days
     #helper = cache --timeout=604800
