Change some options in VS Code

--- a/code/settings.json
+++ b/code/settings.json
@@ -1,3 +1,6 @@
 {
-  "workbench.colorTheme": "Monokai"
+  "editor.fontSize": 12,
+  "editor.renderWhitespace": "boundary",
+  "workbench.colorTheme": "Monokai",
+  "workbench.welcome.enabled": false
 }
