--- a/code/settings.json
+++ b/code/settings.json
@@ -1,4 +1,5 @@
 {
+  "editor.cursorBlinking": "smooth",
   "editor.fontSize": 12,
   "editor.renderWhitespace": "boundary",
   "workbench.colorTheme": "Monokai",
