--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ fish/functions/__ssh_agent_is_started.fish
 fish/functions/__ssh_agent_start.fish
 fish/functions/fish_user_key_bindings.fish
 fish/functions/fzf_key_bindings.fish
+msdos/path-backup.txt
 ssh_config_local
 texmf/tex/latex
 tmux/resurrect
