Update syntaxhighlight to the original author's Git repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,9 @@
 [submodule "fonts"]
     path = bin/fonts
     url = https://github.com/powerline/fonts.git
+[submodule "bin/syntaxhighlight"]
+    path = bin/syntaxhighlight
+    url = https://github.com/andre-simon/highlight.git
 [submodule "git/gitflow-avh"]
     path = git/gitflow-avh
     url = https://github.com/petervanderdoes/gitflow-avh.git
@@ -16,9 +19,6 @@
 [submodule "mintty/minttyrc.d/solarized"]
     path = mintty/minttyrc.d/solarized
     url = https://github.com/mavnn/mintty-colors-solarized.git
-[submodule "syntaxhighlight"]
-    path = bin/syntaxhighlight
-    url = https://github.com/nagromc/syntaxhighlight.git
 [submodule "tmux/plugins/tmux-resurrect"]
     path = tmux/plugins/tmux-resurrect
     url = https://github.com/tmux-plugins/tmux-resurrect.git
