--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -78,3 +78,4 @@
     - [mkdir -p ~/.texmf/tex/latex, Creating local LaTeX packages]
     - [pre-commit install, Installing pre-commit hooks]
     - [sh gnupg/fix-socket-gpg-location.sh]
+    - [chmod go-rwx ~/.gnupg/]
