--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -80,5 +80,5 @@
     - [mkdir -p ~/.texmf/tex/latex, Creating local LaTeX packages]
     - [pre-commit install, Installing pre-commit hooks]
     - [sh gnupg/fix-socket-gpg-location.sh]
-    - [chmod go-rwx ~/.gnupg/]
     - ["curl https://keybase.io/mgn/pgp_keys.asc | gpg --import", Importing my own public key]
+    - ["chmod go-rwx ~/.gnupg/", Fix ~/.gnupg permissions]
