--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,8 @@
 * text=auto
-*.bat eol=crlf
-*.cmd eol=crlf
-*.sh eol=lf
-*.vim eol=lf
-/fish/* eol=lf
-/git/template/hooks/* eol=lf
-/install eol=lf
+*.bat text eol=crlf
+*.cmd text eol=crlf
+*.sh text eol=lf
+*.vim text eol=lf
+/fish/* text eol=lf
+/git/template/hooks/* text eol=lf
+/install text eol=lf
