--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ fish/functions/__ssh_agent_start.fish
 fish/functions/fish_user_key_bindings.fish
 fish/functions/fzf_key_bindings.fish
 msdos/path-backup.txt
+path-backup.txt
 ssh_config_local
 ssh/config.hostnames
 texmf/tex/latex
