Make my own GPG key ultimate-trusted

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -2,6 +2,9 @@
 
 default-key 0x3B0D75B3E87FA1BD7014ADA23D5DDE26A0B55831
 
+# ultimate trust of my own key
+trusted-key 0x3D5DDE26A0B55831
+
 # comments are considerated harmful
 # https://debian-administration.org/users/dkg/weblog/97
 no-comments
