Replace GPG key for SSH authentication

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -57,6 +57,7 @@
     ~/.gnupg/gpg-agent.conf: gnupg/gpg-agent.conf
     ~/.gnupg/gpg.conf: gnupg/gpg.conf
     ~/.gnupg/dirmngr.conf: gnupg/dirmngr.conf
+    ~/.gnupg/sshcontrol: gnupg/sshcontrol
     ~/.highlight/langDefs: bin/syntaxhighlight/langDefs/
     ~/.local/bin/diff-so-fancy: bin/diff-so-fancy/third_party/build_fatpack/diff-so-fancy
     ~/.local/bin/lessvim: /usr/share/vim/vim80/macros/less.sh
