--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,22 +1,13 @@
-# These are best practices from https://riseup.net/en/gpg-best-practices
-
-default-key 0x3B0D75B3E87FA1BD7014ADA23D5DDE26A0B55831
-
-# ultimate trust of my own key
-trusted-key 0x3D5DDE26A0B55831
-
-# comments are considerated harmful
+# See:
+# https://riseup.net/en/gpg-best-practices
 # https://debian-administration.org/users/dkg/weblog/97
-no-comments
-
-# display 16-character key IDs
-keyid-format 0xlong
-
-# list key fingerprints
-with-fingerprint
-
-# stated digest algorithm preferences must include at least one member of the SHA-2 family at a higher priority than both MD5 and SHA1
-default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
 
 # self-signatures should not use MD5 exclusively
 cert-digest-algo SHA512
+default-key 0x3B0D75B3E87FA1BD7014ADA23D5DDE26A0B55831
+# stated digest algorithm preferences must include at least one member of the SHA-2 family at a higher priority than both MD5 and SHA1
+default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
+keyid-format 0xlong
+no-comments
+trusted-key 0x3D5DDE26A0B55831
+with-fingerprint
