Update SSH proxy template to match any host except from company's

--- a/ssh/config.proxy.template
+++ b/ssh/config.proxy.template
@@ -3,7 +3,7 @@
 # are good to go.
 
 # with OpenSSH for Cygwin
-Host host-name
+Host * !*.domain.example.com
     ProxyCommand /usr/bin/corkscrew proxy-hostname proxy-port %h %p ~/.ssh/auth
     IdentityFile ~/.ssh/id_rsa
     ServerAliveInterval 120
@@ -12,5 +12,5 @@ Host host-name
     LogLevel ERROR
 
 # with Win32-OpenSSH (https://github.com/PowerShell/Win32-OpenSSH)
-Host host-name
+Host * !*.domain.example.com
 	ProxyCommand "C:/Program Files/Git/mingw64/bin/connect.exe" -H proxy-hostname:proxy-port %h %p
