--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -2,6 +2,7 @@
 # https://riseup.net/en/gpg-best-practices
 # https://debian-administration.org/users/dkg/weblog/97
 
+armor
 # self-signatures should not use MD5 exclusively
 cert-digest-algo SHA512
 default-key 0x3B0D75B3E87FA1BD7014ADA23D5DDE26A0B55831
