--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -8,6 +8,8 @@ cert-digest-algo SHA512
 default-key 0x3B0D75B3E87FA1BD7014ADA23D5DDE26A0B55831
 # stated digest algorithm preferences must include at least one member of the SHA-2 family at a higher priority than both MD5 and SHA1
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
+# make a copy of encrypted messages for myself
+encrypt-to 0x3B0D75B3E87FA1BD7014ADA23D5DDE26A0B55831
 keyid-format 0xlong
 no-comments
 trusted-key 0x3D5DDE26A0B55831
