Add multiple methods to retrieve gpg keys

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -3,6 +3,7 @@
 # https://debian-administration.org/users/dkg/weblog/97
 
 armor
+auto-key-locate local,cert,pka,dane,wkd,keyserver
 # self-signatures should not use MD5 exclusively
 cert-digest-algo SHA512
 default-key 0x3B0D75B3E87FA1BD7014ADA23D5DDE26A0B55831
