--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -40,6 +40,7 @@
     ~/.config/fish/fisherman/fishfile: fish/fisherman/fishfile
     ~/.config/fish/functions: fish/functions/
     ~/.config/fish/path.fish: fish/path.fish
+    ~/.config/i3/config: i3/config
     ~/.config/fish/shell_prompt.sh: fish/shell_prompt.sh
     ~/.config/fonts: bin/fonts
     ~/.config/git/config: git/gitconfig
