--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -31,6 +31,7 @@
     ~/.bowerrc: bower/bowerrc
     ~/.bundle/config: bundler/config
     ~/.config/Brackets/brackets.json: brackets/brackets.json
+    ~/.config/Code/User/keybindings.json: code/keybindings.json
     ~/.config/Code/User/settings.json: code/settings.json
     ~/.config/fish/abbrs.fish: fish/abbrs.fish
     ~/.config/fish/aliases.fish: fish/aliases.fish
