--- a/.gitmodules
+++ b/.gitmodules
@@ -30,6 +30,9 @@
     path = mintty/minttyrc.d/solarized
     url = https://github.com/mavnn/mintty-colors-solarized.git
     ignore = all
+[submodule "notepad++/themes/scheme.mg.monokai.git"]
+    path = notepad++/themes/scheme.mg.monokai.git
+    url = https://github.com/mgcrea/scheme.mg.monokai.git
 [submodule "tmux/plugins/tmux-resurrect"]
     path = tmux/plugins/tmux-resurrect
     url = https://github.com/tmux-plugins/tmux-resurrect.git
@@ -138,6 +141,3 @@
     path = X11/Xresources.d/solarized
     url = https://github.com/solarized/xresources.git
     ignore = all
-[submodule "notepad++\\themes\\scheme.mg.monokai.git"]
-    path = notepad++\\themes\\scheme.mg.monokai.git
-    url = https://github.com/mgcrea/scheme.mg.monokai.git
