--- a/code/settings.json
+++ b/code/settings.json
@@ -8,5 +8,6 @@
   "files.trimTrailingWhitespace": true,
   "telemetry.enableTelemetry": false,
   "workbench.colorTheme": "Monokai",
+  "workbench.statusBar.feedback.visible": false,
   "workbench.welcome.enabled": false,
 }
