--- a/code/settings.json
+++ b/code/settings.json
@@ -7,6 +7,7 @@
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
+  "search.smartCase": true,
   "telemetry.enableTelemetry": false,
   "workbench.colorTheme": "Monokai",
   "workbench.statusBar.feedback.visible": false,
